--- a/xml-types-parser.cabal
+++ b/xml-types-parser.cabal
@@ -29,5 +29,6 @@ library
     attoparsec >=0.13 && <0.15,
     base >=4.11 && <5,
     text >=1.2.4 && <2,
+    transformers ^>=0.5,
     unordered-containers ^>=0.2.14,
     xml-types ^>=0.3.8,
