--- a/xml-types-parser.cabal
+++ b/xml-types-parser.cabal
@@ -24,6 +24,7 @@ library
   exposed-modules:
     XmlTypesParser
   other-modules:
+    XmlTypesParser.NameMap
     XmlTypesParser.Prelude
   build-depends:
     attoparsec >=0.13 && <0.15,
