--- a/xml-types-parser.cabal
+++ b/xml-types-parser.cabal
@@ -25,10 +25,12 @@ library
     XmlTypesParser
   other-modules:
     XmlTypesParser.NameMap
+    XmlTypesParser.TupleHashMap
     XmlTypesParser.Prelude
   build-depends:
     attoparsec >=0.13 && <0.15,
     base >=4.11 && <5,
+    hashable >=1.2 && <2,
     text >=1.2.4 && <2,
     transformers ^>=0.5,
     unordered-containers ^>=0.2.14,
