--- a/xml-unscrambler.cabal
+++ b/xml-unscrambler.cabal
@@ -24,12 +24,14 @@ library
   exposed-modules:
     XmlUnscrambler
   other-modules:
+    XmlUnscrambler.AstParser
     XmlUnscrambler.NameMap
     XmlUnscrambler.TupleHashMap
     XmlUnscrambler.Prelude
   build-depends:
     attoparsec >=0.13 && <0.15,
     base >=4.11 && <5,
+    bytestring >=0.10 && <0.12,
     hashable >=1.2 && <2,
     text >=1.2.4 && <2,
     transformers ^>=0.5,
