--- a/.github/workflows/integrate.yaml
+++ b/.github/workflows/integrate.yaml
@@ -24,7 +24,7 @@ jobs:
         name: Cache
         with:
           path: ~/.stack
-          key: ${{ runner.os }}-stack-${{ hashFiles('stack.yaml.lock') }}
+          key: ${{ runner.os }}-stack-${{ hashFiles('stack.yaml', 'stack.yaml.lock') }}-${{ hashFiles('**.cabal') }}
           restore-keys: ${{ runner.os }}-stack-
 
       - name: Install dependencies
