--- a/xml-unscrambler.cabal
+++ b/xml-unscrambler.cabal
@@ -35,6 +35,7 @@ library
     bytestring >=0.10 && <0.12,
     hashable >=1.2 && <2,
     text >=1.2.4 && <2,
+    text-builder >=0.6.6.2 && <0.7,
     transformers ^>=0.5,
     unordered-containers ^>=0.2.14,
     xml-conduit ^>=1.9.1.1,
