--- a/xml-parser.cabal
+++ b/xml-parser.cabal
@@ -25,6 +25,7 @@ library
     XmlParser
   other-modules:
     XmlParser.AstParser
+    XmlParser.ElementDestructionState
     XmlParser.NameMap
     XmlParser.NamespaceRegistry
     XmlParser.NodeConsumerState
