--- a/xml-parser.cabal
+++ b/xml-parser.cabal
@@ -9,18 +9,74 @@ maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
 copyright: (c) 2021 Nikita Volkov
 license: MIT
 license-file: LICENSE
-build-type: Simple
 
 source-repository head
   type: git
   location: git://github.com/nikita-volkov/xml-parser.git
 
-library
-  hs-source-dirs: library
-  default-extensions: BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedSums, UnboxedTuples, ViewPatterns
+common base
   default-language: Haskell2010
+  default-extensions:
+    ApplicativeDo
+    Arrows
+    BangPatterns
+    BlockArguments
+    ConstraintKinds
+    DataKinds
+    DefaultSignatures
+    DeriveDataTypeable
+    DeriveFoldable
+    DeriveFunctor
+    DeriveGeneric
+    DeriveTraversable
+    DerivingVia
+    EmptyDataDecls
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    GeneralizedNewtypeDeriving
+    ImportQualifiedPost
+    LambdaCase
+    LiberalTypeSynonyms
+    MultiParamTypeClasses
+    MultiWayIf
+    NoImplicitPrelude
+    NoMonomorphismRestriction
+    OverloadedStrings
+    PatternGuards
+    QuasiQuotes
+    RankNTypes
+    RecordWildCards
+    RoleAnnotations
+    ScopedTypeVariables
+    StandaloneDeriving
+    StrictData
+    TupleSections
+    TypeFamilies
+    TypeOperators
+
+common executable
+  import: base
+  ghc-options:
+    -O2
+    -threaded
+    -with-rtsopts=-N
+    -rtsopts
+    -funbox-strict-fields
+
+common test
+  import: base
+  ghc-options:
+    -threaded
+    -with-rtsopts=-N
+
+library
+  import: base
+  hs-source-dirs: library
   exposed-modules:
     XmlParser
+
   other-modules:
     XmlParser.AstParser
     XmlParser.Attoparsec
@@ -28,31 +84,31 @@ library
     XmlParser.NameMap
     XmlParser.NamespaceRegistry
     XmlParser.NodeConsumerState
-    XmlParser.TupleHashMap
     XmlParser.Prelude
+    XmlParser.TupleHashMap
     XmlParser.XmlConduitWrapper
+
   build-depends:
     attoparsec >=0.13 && <0.15,
     base >=4.11 && <5,
-    bytestring >=0.10 && <0.12,
+    bytestring >=0.10 && <0.14,
     containers ^>=0.6,
     hashable >=1.2 && <2,
     text >=1.2.4 && <3,
     text-builder >=0.6.6.2 && <0.7,
-    transformers ^>=0.5,
+    transformers >=0.5 && <0.8,
     unordered-containers ^>=0.2.14,
     xml-conduit ^>=1.9.1.1,
 
 test-suite test
+  import: test
   type: exitcode-stdio-1.0
   hs-source-dirs: test
-  default-extensions: BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DerivingVia, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedSums, UnboxedTuples, ViewPatterns
-  default-language: Haskell2010
   main-is: Main.hs
   other-modules:
   build-depends:
-    attoparsec >=0.13 && <0.15,
     QuickCheck >=2.8.1 && <3,
+    attoparsec >=0.13 && <0.15,
     quickcheck-instances >=0.3.11 && <0.4,
     rerebase >=1.6.1 && <2,
     tasty >=0.12 && <2,
