--- a/xml-parser.cabal
+++ b/xml-parser.cabal
@@ -53,6 +53,7 @@ common base
     StandaloneDeriving
     StrictData
     TupleSections
+    TypeApplications
     TypeFamilies
     TypeOperators
 
