--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,20 +13,14 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-
-  format:
-    uses: ./.github/workflows/format.yaml
+  format-and-test:
+    uses: ./.github/workflows/format-and-test.yaml
     secrets: inherit
 
-  check:
-    uses: ./.github/workflows/check.yaml
-    secrets: inherit
-  
   release:
     needs:
-      - format
-      - check
-    uses: nikita-volkov/haskell-hackage-lib-github-actions-workflows/.github/workflows/release.yaml@v3
+      - format-and-test
+    uses: nikita-volkov/haskell-hackage-lib-github-actions-workflows/.github/workflows/release.yaml@v4
     secrets: inherit
     with:
       prefix-tag-with-v: false
