--- a/xml-parser.cabal
+++ b/xml-parser.cabal
@@ -99,7 +99,7 @@ library
     text-builder >=0.6.6.2 && <0.7,
     transformers >=0.5 && <0.8,
     unordered-containers ^>=0.2.14,
-    xml-conduit ^>=1.9.1.1,
+    xml-conduit >=1.9.1.1 && <1.11,
 
 test-suite test
   import: test
