--- a/xml-parser.cabal
+++ b/xml-parser.cabal
@@ -93,7 +93,7 @@ library
     attoparsec >=0.13 && <0.15,
     base >=4.11 && <5,
     bytestring >=0.10 && <0.14,
-    containers ^>=0.6,
+    containers >=0.6 && <0.9,
     hashable >=1.2 && <2,
     text >=1.2.4 && <3,
     text-builder >=0.6.6.2 && <0.7,
