--- a/xml-parser.cabal
+++ b/xml-parser.cabal
@@ -96,7 +96,7 @@ library
     containers >=0.6 && <0.9,
     hashable >=1.2 && <2,
     text >=1.2.4 && <3,
-    text-builder,
+    text-builder >=1 && <1.1,
     transformers >=0.5 && <0.8,
     unordered-containers ^>=0.2.14,
     xml-conduit >=1.9.1.1 && <1.11,
