--- a/xml-parser.cabal
+++ b/xml-parser.cabal
@@ -12,7 +12,7 @@ license-file: LICENSE
 
 source-repository head
   type: git
-  location: git://github.com/nikita-volkov/xml-parser.git
+  location: https://github.com/nikita-volkov/xml-parser
 
 common base
   default-language: Haskell2010
@@ -36,7 +36,6 @@ common base
     FunctionalDependencies
     GADTs
     GeneralizedNewtypeDeriving
-    ImportQualifiedPost
     LambdaCase
     LiberalTypeSynonyms
     MultiParamTypeClasses
